compile.log
/main.cpp: In function ‘int main()’:
/main.cpp:148:49: warning: comparison of integer expressions of different signedness: ‘unsigned int’ and ‘int’ [-Wsign-compare]
                 if(reader.dataArray[i].dataIndex<min)
/main.cpp:160:72: error: ‘class std::vector<MessagePiece>’ has no member named ‘index’
         std::cerr << "Recived pieces number " << reader.receivedPieces.index << std::endl;
                                                                        ^~~~~
/main.cpp:181:23: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<MessagePiece>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
         for(int i=0; i<reader.receivedPieces.size(); i++)
                      ~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/main.cpp:183:33: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<MessagePiece>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
                 for(int j=i+1; j<reader.receivedPieces.size(); j++)
                                ~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/main.cpp:194:23: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<MessagePiece>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
         for(int i=0; i<reader.receivedPieces.size(); i++)
                      ~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/main.cpp:109:9: warning: unused variable ‘z’ [-Wunused-variable]
     int z=0;
         ^